2009-12-12  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-property-handler): Filter lambda forms out
	when responding to "GetAll" properties.

2009-12-12  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (compose-mail): Remove mail-setup-with-from from
	customization checks.

2009-12-12  Eli Zaretskii  <eliz@gnu.org>

	* arc-mode.el (archive-rar-summarize): Support Attribute fields in
	RAR archives created on Unix systems.

2009-12-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-local-must-match-filename-map): Re-instate
	the varalias that was accidentally removed by the 2009-11-19 change
	(bug#5186).

2009-12-12  Kenichi Handa  <handa@m17n.org>

	* language/indian.el (indian-compose-regexp): New function.
	(malayalam-composable-pattern): Fix the pattern.
	(composition-function-table): Set malayalam-composable-pattern for
	Malayalam characters.

2009-12-11  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/bug-reference.el (bug-reference-map): Bind mouse-2
	rather than down-mouse-1, based on follow-link conventions.

	* makefile.w32-in: Ensure that Lisp files in CEDET subdirectories
	are compiled.

2009-12-11  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-vmm-begin-re, verilog-vmm-end-re)
	(verilog-vmm-statement-re, verilog-ovm-statement-re)
	(verilog-defun-level-not-generate-re, verilog-calculate-indent)
	(verilog-leap-to-head, verilog-backward-token):
	Fix indenting VMM macros.  Reported by Jonathan Ashbrook.

2009-12-11  Wilson Snyder  <wsnyder@wsnyder.org>

	* verilog-mode.el (verilog-auto-lineup, verilog-nameable-item-re):
	Cleanup user-visible spelling and documentation errors.
	One reported by Gary Delp.
	(verilog-submit-bug-report): Mention bug tracking and CC co-author.
	(verilog-read-decls): Fix AUTOWIRE with types declared in a
	package, bug195.  Reported by Pierre-David Pfister.

2009-12-11  Glenn Morris  <rgm@gnu.org>
