@@ -1,3 +1,9 @@
+2009-12-13  Glenn Morris  <rgm@gnu.org>
+
+	* mail/emacsbug.el (report-emacs-bug): In message-mode, sort manually
+	before storing original report text.  (Bug#5178)
+	Remove superfluous save-excursion.
+
 2009-12-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/dbus.el (dbus-property-handler): Filter lambda forms out
